[workspace]
members = ["libraries/*", "programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anyhow = "1.0"
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", rev = "abfb1abbdf574c5406193a67fae1d34e9d706f46" }
rust_decimal = "1.26.1"
solana-program = "2"
spl-token = { version = ">=5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = ">=5", features = ["no-entrypoint"] }
num-traits = "0.2"
thiserror = "1.0"
typenum = "1.17.0"
fixed = "1.11.0"

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "4cdb0ebe8f613f7dbbd5c4b00571139b2517898f" }
