[workspace]
members = [
    "libraries/*",
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.0"
anyhow = "1.0.86"
jupiter-amm-interface = { git = "https://github.com/edwinwang/jupiter-amm-interface" }
rust_decimal = "1.26.1"
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
num-traits = "0.2"
thiserror = "1.0"
typenum = "1.17.0"
fixed = "1.28.0"
